<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/joinMeetingLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_margin="36dp">

    <EditText
        android:id="@+id/etMeetingId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_meeting_code"
        android:textColorHint="@color/text_color"
        android:background="@drawable/et_style"
        android:gravity="center"
        android:textColor="@color/white"
        android:padding="16dp"
        android:fontFamily="sans-serif-medium"
        android:textFontWeight="500"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_style"
        android:gravity="center"
        android:layout_marginVertical="12dp"
        android:hint="@string/enter_your_name"
        android:textColor="@color/white"
        android:textColorHint="@color/text_color"
        android:padding="16dp"
        android:fontFamily="sans-serif-medium"
        android:textFontWeight="500"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnJoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:letterSpacing="0"
        android:text="@string/join_meeting"
        android:textAllCaps="false"
        android:textSize="18dp"
        app:cornerRadius="15dp"
        android:padding="16dp"
        android:fontFamily="sans-serif-medium"
        android:textFontWeight="700"/>

</LinearLayout>
